nashorn/test/script/basic/NASHORN-60.js.EXPECTED
SyntaxError: Dangling meta character '*' near index 2
2**
  ^
